java and Spring upgrade